--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -68,7 +68,7 @@
   flex-direction: row;
   align-items: center;
   gap: 17px;
-  background: #19376d;
+  background: #2a2c31;
   background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 100%);
   border-radius: 10px;
   padding: 24px;
