--- a/src/vars.css
+++ b/src/vars.css
@@ -2,9 +2,9 @@
   /* Colours */
   --color-text: #fff;
   --color-primary: #576cbc;
-  --color-secondary: #19376d;
+  --color-secondary: #0C0A17;
   --color-dark: #0b2447;
-  --color-bg: #04152d;
+  --color-bg: #0C0A17;
 
   /* Fonts */
   --font-roboto: "Roboto";
