--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -53,7 +53,6 @@
 .heroImg {
   width: 50%;
   z-index: 1;
-
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
@@ -77,7 +76,6 @@
   width: 50vw;
   height: 50vw;
   min-width: 350px;
-  min-width: 350px;
   top: -128px;
   left: -10vw;
   border-radius: 764px;
@@ -90,7 +88,6 @@
   position: absolute;
   width: 70vw;
   height: 50vw;
-  min-width: 350px;
   min-width: 250px;
   top: 246px;
   right: -25vw;
@@ -102,10 +99,26 @@
 
 @media screen and (max-width: 830px) {
   .container {
-    flex-direction: column-reverse;
+    flex-direction: row; /* Keep text and image side by side */
+    align-items: center;
+    justify-content: space-between;
   }
 
   .content {
-    align-items: center;
+    align-items: flex-start; /* Align text to left */
+    text-align: left;
+  }
+
+  .title {
+    font-size: clamp(36px, 8vw, 72px); /* Scale text but keep readable */
+  }
+
+  .description {
+    font-size: clamp(18px, 4vw, 30px);
+  }
+
+  .heroImg {
+    width: 50vw;
+    max-width: 50%;
   }
 }
