--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -121,9 +121,14 @@
   }
 
   .heroImg {
-    width: 40vw;
-    max-width: 150px;
+    width: 50%;
+    z-index: 1;
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
     position: relative;
-    top: -30px; /* Moves image slightly up */
+    top: -80px; /* Moves image higher */
   }
+  
 }
