--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -121,15 +121,14 @@
   }
 
   .heroImg {
-    width: 50%;
+    width: 40vw;
+    max-width: 150px;
+    position: relative;
+    top: -50px; /* Adjust to move it above text */
+    left: 50%;
+    transform: translateX(-50%); /* Centers image horizontally */
     z-index: 1;
-    animation-name: floating;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    position: absolute; /* Change from relative to absolute */
-    top: 10px; /* Adjust to move higher */
-    right: 10%; /* Ensure it's positioned properly */
-  }  
+  }
+  
   
 }
