--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -58,7 +58,7 @@
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   position: relative;
-  top: -50px; /* Moves image up */
+  top: 80px; /* Moves image up */
 }
 
 @keyframes floating {
@@ -122,12 +122,8 @@
   .heroImg {
     width: 40vw;
     max-width: 150px;
-    position: absolute;
-    top: 10px; /* Adjust this for spacing */
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
+    border-radius: 50%;
+    margin-bottom: 15px; /* Push text below */
   }
-  
   
 }
